--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,7 +28,7 @@ opentelemetry = "0.14.0"
 opentelemetry-jaeger = "0.13.0"
 derivative = "2.2.0"
 backtrace = "0.3.59"
-chrono = "0.4.19"
+chrono = { version = "0.4.19", features = ["serde"] }
 highway = "0.6.4"
 hex-literal = "0.3.1"
 byteorder = "1.4.3"
