--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ constant_time_eq = "0.1.5"
 jsonwebtoken = "7.2.0"
 rand = "0.8.3"
 base64 = "0.13.0"
+regex = "1.5.4"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
