--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ lazy_static = "1.4.0"
 log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_info"] }
 slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
 async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
-tokio = "1.6.1"
+tokio = { version = "1.6.1", features = ["full"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = "1.0.64"
 anyhow = "1.0.40"
@@ -43,6 +43,9 @@ jsonwebtoken = "7.2.0"
 rand = "0.8.3"
 base64 = "0.13.0"
 regex = "1.5.4"
+term = "0.7.0"
+async-trait = "0.1.50"
+futures = "0.3.15"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
