--- a/Cargo.toml
+++ b/Cargo.toml
@@ -48,10 +48,10 @@ async-trait = "0.1.50"
 futures = "0.3.15"
 cc = "1.0.68"
 tokio-util = "0.6.7"
+heim = { version = "0.1.0-rc.1", features = ["disk"] }
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
-# jsonwebtoken = { path = '../jsonwebtoken' }
 
 [build-dependencies]
 time = "0.2.26"
