--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,9 @@ futures = "0.3.15"
 cc = "1.0.68"
 tokio-util = "0.6.7"
 heim = { version = "0.1.0-rc.1", features = ["disk"] }
+validator = "0.13.0"
+http = "0.2.4"
+maplit = "1.0.2"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
