--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,8 @@ heim = { version = "0.1.0-rc.1", features = ["disk"] }
 validator = "0.13.0"
 http = "0.2.4"
 maplit = "1.0.2"
+bstr = "0.2.16"
+unicase = "2.6.0"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
