--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ maplit = "1.0.2"
 bstr = "0.2.16"
 unicase = "2.6.0"
 ipnet = "2.3.1"
+dyn-clone = "1.0.4"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
