--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,7 @@ bstr = "0.2.16"
 unicase = "2.6.0"
 ipnet = "2.3.1"
 dyn-clone = "1.0.4"
+path-clean = "0.1.0"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
