--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,6 +58,7 @@ ipnet = "2.3.1"
 dyn-clone = "1.0.4"
 path-clean = "0.1.0"
 reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
+relative-path = "1.4.0"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
