--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ dyn-clone = "1.0.4"
 path-clean = "0.1.0"
 reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
 relative-path = "1.4.0"
+uuid = { version = "0.8.2", features = ["v4"] }
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
