--- a/Cargo.toml
+++ b/Cargo.toml
@@ -60,6 +60,8 @@ path-clean = "0.1.0"
 reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
 relative-path = "1.4.0"
 uuid = { version = "0.8.2", features = ["v4"] }
+url = "2.2.2"
+colored = "2.0.0"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
