--- a/Cargo.toml
+++ b/Cargo.toml
@@ -57,11 +57,13 @@ unicase = "2.6.0"
 ipnet = "2.3.1"
 dyn-clone = "1.0.4"
 path-clean = "0.1.0"
-reed-solomon-erasure = { version = "4.0.2", features = [ "simd-accel" ] }
+reed-solomon-erasure = { version = "4.0.2", features = ["simd-accel"] }
 relative-path = "1.4.0"
 uuid = { version = "0.8.2", features = ["v4"] }
 url = "2.2.2"
 colored = "2.0.0"
+pnet = "0.28.0"
+uom = { version = "0.31.1", features = ["usize", "u8", "u16", "u32", "u64", "u128", "isize", "i8", "i16", "i32", "i64", "i128"] }
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
