--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ thiserror = "1.0.25"
 crossbeam = "0.8.0"
 nix = "0.20.0"
 which = "4.1.0"
-actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
+actix-web = { version = "4.0.0-beta.8", features = ["rustls"] }
 openssl = { version = "0.10.34", features = ["v110"] }
 rustls = "0.19.1"
 notify = "5.0.0-pre.9"
@@ -67,6 +67,9 @@ uom = { version = "0.31.1", features = ["usize", "u8", "u16", "u32", "u64", "u12
 path-absolutize = "3.0.10"
 procfs = "0.9.1"
 windows = "0.13.0"
+actix-rt = "2.2.0"
+actix-server = "1.0.4"
+const_format = "0.2.14"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
