--- a/Cargo.toml
+++ b/Cargo.toml
@@ -74,6 +74,8 @@ pprof = "0.4.3"
 trust-dns-resolver = "0.20.3"
 reqwest = "0.11.4"
 hyper = "0.14.9"
+ring = "0.16.20"
+md-5 = "0.9.1"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
