--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,7 @@ reqwest = "0.11.4"
 hyper = "0.14.9"
 ring = "0.16.20"
 md-5 = "0.9.1"
+sha2 = "0.9.5"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
