--- a/Cargo.toml
+++ b/Cargo.toml
@@ -72,13 +72,15 @@ actix-server = "1.0.4"
 const_format = "0.2.14"
 pprof = "0.4.3"
 trust-dns-resolver = "0.20.3"
-reqwest = "0.11.4"
+reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls"] }
 hyper = "0.14.9"
 ring = "0.16.20"
 md-5 = "0.9.1"
 sha2 = "0.9.5"
 derive_more = "0.99.16"
 actix-http = "3.0.0-beta.8"
+rmp-serde = "0.15.5"
+quick-xml = { version = "0.22.0", features = ["serialize"] }
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
