--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,8 @@ derive_more = "0.99.16"
 actix-http = "3.0.0-beta.8"
 rmp-serde = "0.15.5"
 quick-xml = { version = "0.22.0", features = ["serialize"] }
+educe = "0.4.18"
+etcd-client = { version = "0.7.0", features = ["tls"] }
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
