--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,7 +49,7 @@ futures = "0.3.15"
 cc = "1.0.68"
 tokio-util = "0.6.7"
 heim = { version = "0.1.0-rc.1", features = ["disk"] }
-validator = "0.13.0"
+validator = { version = "0.13.0", features = ["derive"] }
 http = "0.2.4"
 maplit = "1.0.2"
 bstr = "0.2.16"
