--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,6 +84,7 @@ quick-xml = { version = "0.22.0", features = ["serialize"] }
 educe = "0.4.18"
 etcd-client = { version = "0.7.0", features = ["tls"] }
 humantime = "2.1.0"
+async-nats = "0.9.18"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
