--- a/Cargo.toml
+++ b/Cargo.toml
@@ -85,6 +85,7 @@ educe = "0.4.18"
 etcd-client = { version = "0.7.0", features = ["tls"] }
 humantime = "2.1.0"
 async-nats = "0.9.18"
+dashmap = { version = "4.0.2", features = ["serde", "raw-api"] }
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
