--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ actix-cors = "0.5.4"
 futures-core = { version = "0.3.16", default-features = false }
 futures-util = { version = "0.3.16", default-features = false }
 pin-project = "1.0.8"
+mime = "0.3.16"
 
 [patch.crates-io]
 jsonwebtoken = { git = 'https://github.com/01intelligence/jsonwebtoken', branch = 'master' }
