--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,9 @@ bytes = "1.0.1"
 cached = "0.24.0"
 actix-service = "2.0.0"
 askama_escape = "0.10.1"
+tonic = "0.5.0"
+prost = "0.8.0"
+prost-types = "0.8.0"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
@@ -111,3 +114,4 @@ mime = { path = '../mime' }
 
 [build-dependencies]
 time = "0.2.26"
+tonic-build = "0.5.1"
