--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,9 +93,10 @@ bytes = "1.0.1"
 cached = "0.24.0"
 actix-service = "2.0.0"
 askama_escape = "0.10.1"
-tonic = "0.5.0"
+tonic = { version = "0.5.0", features = ["tls"] }
 prost = "0.8.0"
 prost-types = "0.8.0"
+byte-unit = "4.0.12"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
