--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,7 +96,7 @@ askama_escape = "0.10.1"
 tonic = { version = "0.5.0", features = ["tls"] }
 prost = "0.8.0"
 prost-types = "0.8.0"
-byte-unit = "4.0.12"
+byte-unit = { version = "4.0.12", default-features = false, features = ["std"] }
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
