--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,6 +93,7 @@ tonic = { version = "0.5.0", features = ["tls"] }
 prost = "0.8.0"
 prost-types = "0.8.0"
 byte-unit = { version = "4.0.12", default-features = false, features = ["std"] }
+libc = "0.2.98"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
