Add macos support

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -110,8 +110,10 @@ quick-xml = { git = 'https://github.com/01intelligence/quick-xml', branch = 'gol
 mime = { git = 'https://github.com/01intelligence/mime', branch = '0.3.x' }
 
 [target.'cfg(unix)'.dependencies]
-procfs = "0.9.1"
 pprof = "0.4.3"
+
+[target.'cfg(linux)'.dependencies]
+procfs = "0.9.1"
 
 [target.'cfg(windows)'.dependencies]
 windows = "0.18.0"
