--- a/Cargo.toml
+++ b/Cargo.toml
@@ -96,6 +96,9 @@ byte-unit = { version = "4.0.12", default-features = false, features = ["std"] }
 libc = "0.2.98"
 tempfile = "3.2.0"
 faccess = "0.2.3"
+tokio-stream = "0.1.7"
+deadpool = "0.8.2"
+slab = "0.4.4"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
