--- a/Cargo.toml
+++ b/Cargo.toml
@@ -99,6 +99,7 @@ faccess = "0.2.3"
 tokio-stream = "0.1.7"
 deadpool = "0.8.2"
 slab = "0.4.4"
+bumpalo = "3.7.0"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
