--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -13,7 +13,7 @@ jobs:
   build_and_test:
 
     runs-on: ${{ matrix.os }}
-    
+
     strategy:
       matrix:
         include:
@@ -45,6 +45,10 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - name: Codecov
-      uses: codecov/codecov-action@v2.0.2
-
+    - name: Run cargo-tarpaulin
+      uses: actions-rs/tarpaulin@v0.1
+      with:
+        version: '0.15.0'
+        args: '-- --test-threads 1'
+    - name: Upload to Codecov
+      uses: codecov/codecov-action@v1.0.2
