--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -46,9 +46,12 @@ jobs:
     - name: Run tests
       run: cargo test --verbose
     - name: Run cargo-tarpaulin
+      if: matrix.os == 'ubuntu-latest'
       uses: actions-rs/tarpaulin@v0.1
       with:
-        version: '0.15.0'
         args: '-- --test-threads 1'
     - name: Upload to Codecov
+      if: matrix.os == 'ubuntu-latest'
       uses: codecov/codecov-action@v1.0.2
+      with:
+        token: ${{secrets.CODECOV_TOKEN}}
