--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "hulk"
 version = "0.1.0"
 authors = ["01Intelligence, Inc."]
 edition = "2018"
+resolver = "2"
 
 [dependencies]
 clap = "3.0.0-beta.2"
@@ -108,6 +109,9 @@ async-recursion = "0.3.2"
 serde_repr = "0.1.7"
 rmp = "0.8.10"
 twox-hash = "1.6.1"
+ta = "0.5.0"
+num-derive = "0.3.3"
+num-traits = "0.2.14"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
@@ -121,6 +125,7 @@ actix-web = { git = 'https://github.com/01intelligence/actix-web', branch = 'mas
 quick-xml = { git = 'https://github.com/01intelligence/quick-xml', branch = 'golang_xml' }
 mime = { git = 'https://github.com/01intelligence/mime', branch = '0.3.x' }
 camino = { git = 'https://github.com/01intelligence/camino', branch = 'master' }
+slog-term = { git = 'https://github.com/01intelligence/term', branch = 'master' }
 
 [target.'cfg(unix)'.dependencies]
 pprof = "0.4.3"
@@ -135,3 +140,6 @@ winbinding = { path = "winbinding" }
 [build-dependencies]
 time = "0.2.26"
 tonic-build = "0.5.1"
+
+[dev-dependencies]
+criterion = "0.3.5"
