--- a/Cargo.toml
+++ b/Cargo.toml
@@ -112,6 +112,8 @@ twox-hash = "1.6.1"
 ta = "0.5.0"
 num-derive = "0.3.3"
 num-traits = "0.2.14"
+scopeguard = "1.1.0"
+itertools = "0.10.1"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
