--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,6 +118,7 @@ digest = "0.9.0"
 arcstr = "1.1.1"
 snap = "1.0.5"
 num-bigint = "0.4.2"
+tower = "0.4.8"
 
 [dependencies.actix-cors]
 git = 'https://github.com/actix/actix-extras'
