--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ default = []
 clap = "3.0.0-beta.2"
 lazy_static = "1.4.0"
 log = { version = "0.4.14", features = ["max_level_trace", "release_max_level_info"] }
-slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info"] }
+slog = { version = "2.7.0", features = ["max_level_trace", "release_max_level_info", "nested-values"] }
 async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
 tokio = { version = "1.10.0", features = ["full"] }
 serde = { version = "1.0.126", features = ["derive"] }
